added script to load md file

--- a/index.html
+++ b/index.html
@@ -3,5 +3,5 @@
         <h1>Hojoong's Portfolio Website</h1>
     </body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
-    <script src="./script.js"></script>
+    <script type-"module" src="./script.js"></script>
 </html>
