--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
+    <header>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
+        <script src="./script.js"></script>
+    </header>
     <body>
-        <h1>Hojoong's Portfolio Website</h1>
+        <div id="mainView"></div>
+        <script>loadMDs("content.md");</script>
     </body>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
-    <script type-"module" src="./script.js"></script>
+
 </html>
