refined the loadMarkdown function

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <script src="./script.js"></script>
     </header>
     <body>
-        <div id="mainView"></div>
-        <script>loadMDs("content.md");</script>
+        <div id="content"></div>
     </body>
 
+    <script>loadMarkdown("content.md", "content");</script>
 </html>
