--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
         <script src="./script.js"></script>
     </header>
     <body>
-        <div id="content"></div>
-    </body>
+        <div id="title">let hojoong = sum(microproducts)</div>
+        <div id="main">
+            <div class="col" id="products">
+                
+            </div>
+            <div class="col" id="projects">
 
-    <script>loadMarkdown("content.md", "content");</script>
+            </div>
+            <div class="col" id="publications">
+
+            </div>
+        </div>
+    </body>
+    <footer>
+        <a>Designed and coded by Hojoong Chung. All rights reserved 2019-2020.</a>
+    </footer>
+
+    <!-- <script>loadMarkdown("content.md", "content");</script> -->
 </html>
