--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <div id="title">let hojoong = sum(microproducts)</div>
         <div id="main">
             <div class="col" id="products">
-                
+                    <script>loadFolder("products", "content");</script>
             </div>
             <div class="col" id="projects">
 
