--- a/index.html
+++ b/index.html
@@ -7,19 +7,17 @@
         <div id="title">let hojoong = sum(microproducts)</div>
         <div id="main">
             <div class="col" id="products">
-                    <script>loadFolder("products", "content");</script>
+                <div id="prod_1"></div>
             </div>
             <div class="col" id="projects">
-
+                <div id="proj_1"></div>
             </div>
             <div class="col" id="publications">
-
+                <div id="pub_1"></div>
             </div>
         </div>
     </body>
     <footer>
         <a>Designed and coded by Hojoong Chung. All rights reserved 2019-2020.</a>
     </footer>
-
-    <!-- <script>loadMarkdown("content.md", "content");</script> -->
 </html>
