--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
         <div id="main">
             <div class="col" id="products">
                 <div id="prod_1"></div>
+                <div id="prod_2"></div>
             </div>
             <div class="col" id="projects">
                 <div id="proj_1"></div>
+                <div id="proj_2"></div>
             </div>
             <div class="col" id="publications">
                 <div id="pub_1"></div>
