--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <html>
-    <header>
+    <head>
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154366933-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-154366933-1');
+        </script>
+
+        <!-- Showdown : HTML converter from MD -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
+        
+        <!-- Webpage JS script -->
         <script src="./script.js"></script>
+    </head>
+    <header>
+        <h1 id="title">let hojoong = sum(microproducts)</h1>
     </header>
     <body>
-        <div id="title">let hojoong = sum(microproducts)</div>
         <div id="main">
             <div class="col" id="products">
                 <div id="prod_1"></div>
@@ -18,7 +33,7 @@
                 <div id="pub_1"></div>
             </div>
         </div>
-    </body>
+    </body>    
     <footer>
         <a>Designed and coded by Hojoong Chung. All rights reserved 2019-2020.</a>
     </footer>
