--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154366933-1"></script>
         <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
 
-        gtag('config', 'UA-154366933-1');
+            gtag('config', 'UA-154366933-1');
         </script>
 
         <!-- Showdown : HTML converter from MD -->
@@ -15,23 +15,18 @@
         
         <!-- Webpage JS script -->
         <script src="./script.js"></script>
+
+        <!-- Load css -->
+        <link rel="stylesheet" href="./style.css">
     </head>
     <header>
         <h1 id="title">let hojoong = sum(microproducts)</h1>
     </header>
     <body>
         <div id="main">
-            <div class="col" id="products">
-                <div id="prod_1"></div>
-                <div id="prod_2"></div>
-            </div>
-            <div class="col" id="projects">
-                <div id="proj_1"></div>
-                <div id="proj_2"></div>
-            </div>
-            <div class="col" id="publications">
-                <div id="pub_1"></div>
-            </div>
+            <div class="col" id="products"></div>
+            <div class="col" id="projects"></div>
+            <div class="col" id="publications"></div>
         </div>
     </body>    
     <footer>
