--- a/index.html
+++ b/index.html
@@ -17,16 +17,22 @@
         <script src="./script.js"></script>
 
         <!-- Load css -->
-        <link rel="stylesheet" href="./style.css">
+        <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <header>
-        <h1 id="title">let hojoong = sum(microproducts)</h1>
+        <h1 id="title">let hojoong =2 sum(microproducts)</h1>
     </header>
     <body>
         <div id="main">
-            <div class="col" id="products"></div>
-            <div class="col" id="projects"></div>
-            <div class="col" id="publications"></div>
+            <div class="col" id="products">
+            
+            </div>
+            <div class="col" id="projects">
+
+            </div>
+            <div class="col" id="publications">
+
+            </div>
         </div>
     </body>    
     <footer>
