--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <header>
-        <h1 id="title">let hojoong =2 sum(microproducts)</h1>
+        <h1 id="title">sum(microproducts)</h1>
     </header>
     <body>
         <div class="container" id="main">
