refined design and code

--- a/index.html
+++ b/index.html
@@ -10,33 +10,49 @@
             gtag('config', 'UA-154366933-1');
         </script>
 
+        <!-- Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
+
         <!-- Showdown : HTML converter from MD -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.1/showdown.min.js"></script>
         
         <!-- Bootstrap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <!-- Webpage JS script -->
+
+        <!-- JavaScript -->
         <script src="./script.js"></script>
 
-        <!-- Load css -->
+        <!-- css -->
         <link rel="stylesheet" type="text/css" href="./style.css">
     </head>
     <header>
-        <h1 id="title">sum(microproducts)</h1>
+
     </header>
     <body>
-        <div class="container" id="main">
+        <div id="footer">
+            Designed and coded by Hojoong Chung. All rights reserved 2019-2020.
+        </div>
+        <div class="container" id="spacer">
+
+        </div>
+        <div class="container-fluid" id="main">
             <div class="row">
-                    <div class="col-lg-4" id="products">
-                    </div>
-                    <div class="col-lg-4" id="projects">
-                    </div>
-                    <div class="col-lg-4" id="publications">
-                    </div>
+                <div class="col-lg-4" id="products"></div>
+                <div class="col-lg-4" id="projects"></div>
+                <div class="col-lg-4" id="publications"></div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="container-fluid" id="title">
+                <a>microproducts</a>
+                <a class="small-font">by Hojoong Chung</a>
+            </div>
+            <div class="container-fluid" id="menu">
+                <a href="">about</a>
+                <a href="https://github.com/hodgoong">github</a>
+                <a href="hodgoong@gmail.com">email</a>
+                <a href="">blog</a>
             </div>
         </div>
     </body>    
-    <footer>
-        <a>Designed and coded by Hojoong Chung. All rights reserved 2019-2020.</a>
-    </footer>
 </html>
