updated popup function

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <a class="small-font">by Hojoong Chung</a>
             </div>
             <div class="container-fluid" id="menu">
-                <a href="">about</a>
+                <a onClick="">about</a>
                 <a href="https://github.com/hodgoong">github</a>
                 <a href="hodgoong@gmail.com">email</a>
                 <a href="">blog</a>
