--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
                 <a class="small-font">by Hojoong Chung</a>
             </div>
             <div class="container-fluid" id="menu">
-                <a onClick="">about</a>
+                <a href="">about</a>
                 <a href="https://github.com/hodgoong">github</a>
                 <a href="hodgoong@gmail.com">email</a>
-                <a href="">blog</a>
+                <a href="hojoongchung.wordpress.com">blog</a>
             </div>
         </div>
     </body>    
