--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
         <div id="footer">
             Designed and coded by Hojoong Chung. All rights reserved 2019-2020.
         </div>
-        <div class="container" id="spacer">
-
-        </div>
-        <div class="container-fluid" id="main">
+        <div class="container" id="spacer"></div>
+        <div class="container" id="main">
             <div class="row">
                 <div class="col-lg-4" id="products"></div>
                 <div class="col-lg-4" id="projects"></div>
