adjusted mobile behavior

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         </div>
         <div class="container-fluid">
             <div class="container-fluid" id="title">
-                <a style="font-size:20px; color:lightgray">let hojoong = sum(</a>
+                <a class="subtext" style="font-size:20px; color:lightgray">let hojoong = sum(</a>
                 <a>microproducts</a>
-                <a style="font-size:20px; color:lightgray">);</a>
+                <a class="subtext" style="font-size:20px; color:lightgray">);</a>
                 <a class="blink">_</a>
             </div>
             <div class="container-fluid" id="menu">
