--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
         </div>
         <div class="container" id="spacer"></div>
-        <div class="container" id="main">
+        <div id="main">
             <div class="d-flex justify-content-center flex-wrap" id="products">
             </div>
         </div>
