--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
-            gtag('config', 'UA-154366933-1');
+            gtag('config', 'UA-154366933-1', {'page_path': '/'});
         </script>
 
         <!-- Fonts -->
