pulled analytitics container ID as a constant

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
         <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-154366933-1"></script>
         <script>
+            const gaID = 'UA-154366933-1';
             window.dataLayer = window.dataLayer || [];
             function gtag(){dataLayer.push(arguments);}
             gtag('js', new Date());
 
-            gtag('config', 'UA-154366933-1', {'page_path': '/'});
+            gtag('config', gaID, {'page_path': '/'});
         </script>
 
         <!-- Fonts -->
